--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
     "node-telegram-bot-api": "^0.61.0",
     "speakeasy": "^2.0.0",
     "uuid": "^9.0.0",
-    "fs-extra": "^11.1.1"
+    "fs-extra": "^11.1.1",
+
+    "tough-cookie": "^4.1.3",
+    "axios-cookiejar-support": "^5.0.1",
+    "cheerio": "^1.0.0-rc.12"
   }
 }
