--- a/.env
+++ b/.env
@@ -1,4 +1,9 @@
+# Telegram Bot Configuration
 BOT_TOKEN=7618243719:AAFT8T3_1aRjNwgKNmkyO9akLiE3oBX-CJI
-ADMIN_UID=7933110913         # তোমার Telegram UID (সংখ্যা)
-ADMIN_USERNAME=rx_rihad     # @ ছাড়া username
-PORT=3000                    # সার্ভারের পোর্ট (যদি প্রয়োজন হয়)
+ADMIN_UID=7933110913
+ADMIN_USERNAME=rx_rihad
+PORT=3000
+
+# PikachuTools Login Credentials
+EMAIL=maxjihad59@gmail.com
+PASSWORD=Likhon@#12
